fixing error on group edit where text didn't wrap or if description over 256 chars

--- a/frontend/src/components/GroupPage/GroupPage.css
+++ b/frontend/src/components/GroupPage/GroupPage.css
@@ -37,4 +37,5 @@
 .container p {
 	font-size: large;
 	padding: 5px;
+	overflow-wrap: anywhere;
 }
